--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -50,18 +50,25 @@ var fResS = []
 pImgs.map(img => {
   img = img.default
   if (typeof img === 'object') {
-    var obj = img
-
     var name = getFNameNoExt(img.src)
 
     var fullRes = fResS.filter(r => getFNameNoExt(r) === getFNameNoExt(img.src))
     if (fullRes.length > 0) {
-      obj.fullRes = fullRes[0]
+      img.fullRes = fullRes[0]
     }
 
-    portfolioImgs.push(obj)
+    portfolioImgs.push(img)
   }
   else fResS.push(img)
+})
+
+portfolioImgs.forEach((img, i) => {
+  var fullRes = fResS.filter(r => getFNameNoExt(r) === getFNameNoExt(img.src))
+  if (fullRes.length > 0) {
+    img.fullRes = fullRes[0]
+  }
+
+  portfolioImgs[i] = img
 })
 
 export function getStaticPaths() {
@@ -169,7 +176,7 @@ else userData.status = 'inactive'
                     else img = {}
                     return (
                       <li>
-                        <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} />
+                        <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} fullRes={img.fullRes || ''} />
                       </li>
                     )
                   })
