--- a/src/components/largeImage.astro
+++ b/src/components/largeImage.astro
@@ -1,7 +1,7 @@
 ---
 // import { Image } from 'astro:assets';
 
-const { id, src, alt, orientation, draggable } = Astro.props as Props;
+const { id, src, alt, orientation, draggable, fullRes } = Astro.props as Props;
 
 import '../styles/components/largeImage.scss'
 ---
