--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -105,7 +105,7 @@ var dId = 'workCarousel'
     {
         (
             images.map((img, i) => {
-                <LargeImage id={`${dId}-${i}`} src={img.src} alt={`${getFNameNoExt(img.src)} by ${toProper(img.username)}`} draggable={false} fullRes={img.fullRes || ''} />
+                <LargeImage id={`${dId}-${i}`} src={img.src} alt={`${getFNameNoExt(img.src)} by ${toProper(img.username)}`} draggable={false} fullRes={img.fullRes} />
             })
         )
     }
