--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -62,6 +62,8 @@ pImgs.map(img => {
   else fResS.push(img)
 })
 
+console.log(fResS)
+
 portfolioImgs.forEach((img, i) => {
   var fullRes = fResS.filter(r => getFNameNoExt(r) === getFNameNoExt(img.src))
   if (fullRes.length > 0) {
@@ -174,12 +176,12 @@ else userData.status = 'inactive'
                     var img = portfolioImgs.filter(i => decodeURIComponent(getFNameNoExt(i.src, 2)) === file)
                     if (img.length > 0) img = img[0]
                     else img = {}
-                    return <pre>{JSON.stringify(img, null, 4)}</pre>
-                    // return (
-                    //   <li>
-                    //     <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} fullRes={img.fullRes} />
-                    //   </li>
-                    // )
+                    // return <pre>{JSON.stringify(img, null, 4)}</pre>
+                    return (
+                      <li>
+                        <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} fullRes={img.fullRes} />
+                      </li>
+                    )
                   })
                 }
               </ul>
