--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -59,7 +59,7 @@ pImgs.map(img => {
 
     portfolioImgs.push(img)
   }
-  else fResS.push(img)
+  else fResS.push(getFNameNoExt(img))
 })
 
 console.log(fResS)
