--- a/src/components/largeImage.astro
+++ b/src/components/largeImage.astro
@@ -8,13 +8,14 @@ import '../styles/components/largeImage.scss'
 <label class="img-parent">
     <input type="checkbox" />
     <div class="img-container">
-        <img id={id || null} src={src} style={`--bg: url('${src}')`} alt={alt || ''} orientation={orientation || ''} draggable={draggable || false} loading="lazy" decoding="async" />
+        <pre>{fullRes}</pre>
+        <!-- <img id={id || null} src={src} style={`--bg: url('${src}')`} alt={alt || ''} orientation={orientation || ''} draggable={draggable || false} loading="lazy" decoding="async" />
         {
             !!fullRes ? (
                 <iframe id={id || null} src={fullRes}>
                     <img id={id || null} src={src} style={`--bg: url('${src}')`} alt={alt || ''} orientation={orientation || ''} draggable={draggable || false} loading="lazy" decoding="async" />
                 </iframe>
             ) : ''
-        }
+        } -->
     </div>
 </label>
