--- a/src/components/largeImage.astro
+++ b/src/components/largeImage.astro
@@ -8,7 +8,7 @@ import '../styles/components/largeImage.scss'
 <label class="img-parent">
     <input type="checkbox" />
     <div class="img-container">
-        <pre>{fullRes}</pre>
+        <pre style="min-height: 1rem;">{fullRes}</pre>
         <!-- <img id={id || null} src={src} style={`--bg: url('${src}')`} alt={alt || ''} orientation={orientation || ''} draggable={draggable || false} loading="lazy" decoding="async" />
         {
             !!fullRes ? (
