--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -174,20 +174,21 @@ else userData.status = 'inactive'
                     var img = portfolioImgs.filter(i => decodeURIComponent(getFNameNoExt(i.src, 2)) === file)
                     if (img.length > 0) img = img[0]
                     else img = {}
-                    // return <pre>{JSON.stringify(img, null, 4)}</pre>
-                    return (
-                      <li>
-                        <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} fullRes={img.fullRes} />
-                      </li>
-                    )
+                    return <pre>{JSON.stringify(img, null, 4)}</pre>
+                    // return (
+                    //   <li>
+                    //     <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} fullRes={img.fullRes} />
+                    //   </li>
+                    // )
                   })
                 }
               </ul>
             : ''
           }
         </section>
-      : <section>
-          <p>Unknown User Status, Displaying aw UserData.</p>
+       : 
+        <section>
+          <p>Unknown User Status, Displaying raw UserData.</p>
           <pre>{JSON.stringify(userData, null, 4)}</pre>
         </section>
     }
