--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -57,7 +57,7 @@ pImgs.map(img => {
 
 portfolioImgs.forEach((img, i) => {
   var fullRes = fResS.filter(r => getFNameNoExt(r) === getFNameNoExt(img.src))
-  console.lpog(fullRes)
+  console.log(fullRes)
   if (fullRes.length > 0) {
     img.fullRes = fullRes[0]
   }
