--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -65,8 +65,6 @@ portfolioImgs.forEach((img, i) => {
   portfolioImgs[i] = img
 })
 
-userData.portfolio = portfolioImgs
-
 export function getStaticPaths() {
   return [
     {params: {username: 'adarsh'}}, 
@@ -121,6 +119,18 @@ if (userData.status) {
 }
 else userData.status = 'inactive'
 
+var userImgs = []
+userData.portfolio.map((item, i) => {
+  var file = item.file
+  if (getFExt(file) === '.pdf') {
+    return ''
+  }
+  var data = portfolioImgs.filter(img => file === getFNameNoExt(img.src))
+  if (data.length > 0) userImgs.push(data)
+})
+
+userData.portfolio = userImgs
+
 ---
 <Layout title={userData.name}>
   <main id="content" class="profile">
@@ -161,15 +171,7 @@ else userData.status = 'inactive'
               <h2>Portfolio</h2>
               <ul class="photos" style="height: auto; gap: 25px;">
                 {
-                  userData.portfolio.map(photo => {
-                    var file = photo.file
-                    if (getFExt(file) === '.pdf') {
-                      return ''
-                    }
-                    else file = getFNameNoExt(file)
-                    var img = portfolioImgs.filter(i => decodeURIComponent(getFNameNoExt(i.src, 2)) === file)
-                    if (img.length > 0) img = img[0]
-                    else img = {}
+                  userData.portfolio.map(img => {
                     return <pre>{JSON.stringify(img, null, 4)}</pre>
                     // return (
                     //   <li>
