--- a/src/components/split.astro
+++ b/src/components/split.astro
@@ -6,7 +6,7 @@ export interface Props {
   classItems: string;
 }
 
-const { idName, classItems } = Astro.props as Props;
+const { idName, classItems } = Astro.props;
 let className = 'split'
 if (!!classItems) { 
   className = `${className} ${classItems}`
