--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import '../styles/photos.scss'
         <h2>Empowering Non-Profits Through the Power of Design!</h1>
       </div>
     </Hero>
-    <Split idName="mission">
+    <Split idName="mission" classItems="">
       <section id="mSection">
         <h1>Our Mission</h1>
         <div class="missiontext">
