--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -9,41 +9,32 @@ var images = []
 var members = [
     {
         username: 'maya', 
-        images: await import.meta.glob('../../../members/maya/renamedPortfolio/*'), 
+        imgs: await Astro.glob('../../../members/maya/renamedPortfolio/*'), 
         fullRes: [], 
     }, 
     {
         username: 'isabelle', 
-        images: await import.meta.glob('../../../members/isabelle/renamedPortfolio/*'), 
+        imgs: await Astro.glob('../../../members/isabelle/renamedPortfolio/*'), 
         fullRes: [], 
     }, 
     {
         username: 'tyler', 
-        images: await import.meta.glob('../../../members/tyler/renamedPortfolio/*'), 
+        imgs: await Astro.glob('../../../members/tyler/renamedPortfolio/*'), 
         fullRes: [], 
     }, 
     {
         username: 'shikha', 
-        images: await import.meta.glob('../../../members/shikha/renamedPortfolio/*'), 
+        imgs: await Astro.glob('../../../members/shikha/renamedPortfolio/*'), 
         fullRes: [], 
     }, 
     {
         username: 'samantha', 
-        images: await import.meta.glob('../../../members/samantha/renamedPortfolio/*'), 
+        imgs: await Astro.glob('../../../members/samantha/renamedPortfolio/*'), 
         fullRes: [], 
     }, 
 ]
 
-
 members.forEach((m, i) => {
-    m.imgs = []
-    for (const path in m.images) {
-        m.images[path]().then((mod) => {
-            m.imgs.push(mod)
-        })
-    }
-    members[i].imgs = m.images
-    
     m.imgs.forEach(img => {
         img = img.default
         
