--- a/src/components/carousels/clubCarousel.astro
+++ b/src/components/carousels/clubCarousel.astro
@@ -2,14 +2,7 @@
 import Carousel from '../carousel.astro'
 import LargeImage from '../largeImage.astro'
 
-var imgs = await import.meta.glob('../../../imgs/club_photos/*')
-var images = []
-
-for (const path in imgs) {
-  imgs[path]().then((mod) => {
-    images.push(mod)
-  })
-}
+var images = await Astro.glob('../../../imgs/club_photos/*')
 
 const { carouselIndex } = Astro.props
 
